cli/src/tui/view/snapshots/tui_pool_info_unrecognized_profile_renders_verbatim.snap
---
source: cli/src/tui/view/mod.rs
assertion_line: 1692
expression: buffer_to_string(&terminal)
---
Data  Scrub  Browse
 Pool ──────────────────────────────────────────────────────
 Path       /mnt/storage
 Profile    data RAID5 | meta RAID1 | system RAID1
 Usage      29% 2.1 TiB / 7.3 TiB (Estimated)
 Type       Profile  Used       Allocated
 Data       RAID5    1.0 MiB    2.0 MiB
 Metadata   RAID1    1.0 MiB    2.0 MiB
 System     RAID1    1.0 MiB    2.0 MiB
 Disks ─────────────────────────────────────────────────────
     Name     Bus  SMART   Temp btrfs Allocated
 ▶ 1 toshiba  sata ok      -    0 err 25%  1.4 / 5.5 TiB
   2 ironwolf sata warning -    3 err 25%  1.4 / 5.5 TiB
   3 wdc      usb  -       -    0 err 21%  0.8 / 3.6 TiB
Quit: q │ Help: ? │ Reset temp hi/lo: R │ Reload: r
